       - Restored Role.equals(..) and hashCode(..) methods so that two roles with the
         same parent application, name and child roles are equals.
       - Added Role.application property to make it more explicit what is required
         for role equality and to make the MemoryRealm class less ambiguous.
         Reported by Tim Peierls, Martin Svensson, Peter Ansell and others.
    - Bug fixed
       - The same ones as in version 2.1.2.
    - Misc
       - Updated the links to the user guide in the wiki.

- 2.2 Milestone 1 (12/24/2012)
    - Enhancements
       - Upgraded Jetty to version 8.1.5.
       - Upgraded JAX-RS to version 1.1.1.
       - Upgraded Servlet API to version 3.0.
       - Upgraded Jackson to version 2.1.0 and Woodstox to 4.1.4.
         Now supporting JSON binary (Smile), XML, YAML and CSV
         serialization format based on the media type.
       - Added OBAP (OSGi Bundle Access Protocol) client connector
         to allow access to resources from other OSGi bundles.
         Use "obap://{bundleSymbolicName}/{pathToResource}"
         Added to the "org.restlet.ext.osgi" extension (OSGi edition).
       - Added additional content type mappings to the JAX-RS module client.
       - OAuth extension has been upgraded to support OAuth 2.0 draft 30
         specification. Contributed by Shotaro Uchida.
    - API changes
       - Added a resource client to the JAX-RS extension.
         Contributed by Shaun Elliott.
       - Added an optional namespace prefix mapper for JAXB representations 
         when marshalling Java content into XML.
         Contributed by Emanuele Ziglioli.
       - Added support of the Jackson Smile format.
         Suggested by Tim Peierls.
       - Added conveniency add(...) method signature without Reference 
         parameters in RdfClientResource.
       - Added Method.PATCH constant and @Patch annotation based on RFC 5789.
         Suggested by Brian Sletten.